--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Womeninhistory.GitHub.io</h1>
+        <h1 class="header">The Rights of Canadian Women</h1>
         <p class="header">Museum Exhibit Framework on the History of Canadian Women&#39;s Rights (LIBS1160 Major Assignment)</p>
 
         <ul>
