--- a/index.html
+++ b/index.html
@@ -1,64 +1,140 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Exhibit Framework - Rights of Canadian Women</title>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>Exhibit Framework - Rights of Canadian Women</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
+<link rel="stylesheet" href="stylesheets/styles.css">
+<link rel="stylesheet" href="stylesheets/github-light.css">
+<script src="javascripts/scale.fix.js"></script>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, user-scalable=no">
+<!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">The Rights of Canadian Women</h1>
-        <p class="header">Museum Exhibit Framework on the History of Canadian Women&#39;s Rights (LIBS1160 Major Assignment)</p>
+</head>
+<body>
+	<div class="wrapper">
+		<header>
+			<h1 class="header">The Rights of Canadian Women</h1>
+			<p class="header">Museum Exhibit Framework on the History of
+				Canadian Women&#39;s Rights (LIBS1160 Major Assignment)</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download ZIP</a></li>
-          <li><a class="buttons github" href="https://github.com/shale462/WomenInHistory.github.io">View On GitHub</a></li>
-        </ul>
+			<ul>
+				<li class="download"><a class="buttons"
+					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
+						ZIP</a></li>
+				<li><a class="buttons github"
+					href="https://github.com/shale462/WomenInHistory.github.io">View
+						On GitHub</a></li>
+			</ul>
+			<ul>
+				<li><a class="buttons" href="Women1870">1870-1879</a></li>
+				<li><a class="buttons" href="Women1880">1880-1889</a></li>
+				<li><a class="buttons" href="Women1890">1890-1899</a></li>
+				<li><a class="buttons" href="Women1900">1900-1909</a></li>
+				<li><a class="buttons" href="Women1910">1910-1919</a></li>
+				<li><a class="buttons" href="Women1910">1920-1929</a></li>
+				<li><a class="buttons" href="Women1910">1930-1939</a></li>
+				<li><a class="buttons" href="Women1910">1940-1949</a></li>
+				<li><a class="buttons" href="Women1910">1950-1959</a></li>
+			</ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/shale462">shale462</a></p>
+			<p class="header">
+				This project is maintained by <a class="header name"
+					href="https://github.com/shale462">shale462</a>
+			</p>
 
 
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Exhibit Framework</h3>
+		</header>
+		<section>
+			<h3>
+				<a id="welcome-to-github-pages" class="anchor"
+					href="#welcome-to-github-pages" aria-hidden="true"><span
+					class="octicon octicon-link"></span></a>Exhibit Framework
+			</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub for Mac or GitHub for Windows, simply sync your repository and you’ll see the new branch.</p>
+			<p>
+				This automatic page generator is the easiest way to create beautiful
+				pages for all of your projects. Author your page content here <a
+					href="https://guides.github.com/features/mastering-markdown/">using
+					GitHub Flavored Markdown</a>,.<br>The purpose of this website is
+				to propose a new museum exhibit and allow visitors to navigate
+				through the framework to explore the proposed topic at length.
+			</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+			<h3>
+				<a id="designer-templates" class="anchor" href="#designer-templates"
+					aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer
+				Templates
+			</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-<iframe width="640" height="390" src="https://www.youtube.com/embed/8n65Y8itAcg" frameborder="0" allowfullscreen></iframe>
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+			<p>
+				The first wave of feminism in Canada is one of great importance.
+				Navigation through each decade of the lives of Canadian women and
+				the early struggles to be seen as equals is a very enriching
+				learning experience. To see what kinds of topics are to be covered
+				in the exhibit, please use the navigation menu on the left.<br>
+				<br>
+			</p>
+			<iframe width="640" height="390"
+				src="https://www.youtube.com/embed/8n65Y8itAcg" frameborder="0"
+				allowfullscreen></iframe>
+			<h3>
+				<a id="creating-pages-manually" class="anchor"
+					href="#creating-pages-manually" aria-hidden="true"><span
+					class="octicon octicon-link"></span></a>Why Explore First-Wave
+				Feminism?
+			</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+			<p>I The influence of women in the late 1800s to early 1900s
+				resulted in enormous changes for human rights in Canada. This
+				resulted in the empowerment of many women and led to further
+				movements in the 1960s and onwards. The Famous Five, a well-known
+				group of brave and relentless women were at the forefront of the
+				movements</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+			<h3>
+				<a id="authors-and-contributors" class="anchor"
+					href="#authors-and-contributors" aria-hidden="true"><span
+					class="octicon octicon-link"></span></a>Authors and Contributors
+			</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+			<p>
+				You can <a href="https://github.com/blog/821" class="user-mention">@mention</a>
+				a GitHub username to generate a link to their profile. The resulting
+				<code>&lt;a&gt;</code>
+				element will link to the contributor’s GitHub Profile. For example:
+				In 2007, Chris Wanstrath (<a href="https://github.com/defunkt"
+					class="user-mention">@defunkt</a>), PJ Hyett (<a
+					href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>),
+				and Tom Preston-Werner (<a href="https://github.com/mojombo"
+					class="user-mention">@mojombo</a>) founded GitHub.
+			</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+			<h3>
+				<a id="support-or-contact" class="anchor" href="#support-or-contact"
+					aria-hidden="true"><span class="octicon octicon-link"></span></a>Support
+				or Contact
+			</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
-  </body>
+			<p>
+				Having trouble with Pages? Check out our <a
+					href="https://help.github.com/pages">documentation</a> or <a
+					href="https://github.com/contact">contact support</a> and we’ll
+				help you sort it out.
+			</p>
+		</section>
+		<footer>
+			<p>
+				<small>Hosted on <a href="https://pages.github.com">GitHub
+						Pages</a> using the Dinky theme
+				</small>
+			</p>
+		</footer>
+	</div>
+	<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+</body>
 </html>
