--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 		</header>
 		<section>
+		<h1 class="header">The Rights of Canadian Women</h1>
 			<h3>
 				<a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
