--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<li><a class="buttons" href="Women1910">1950-1959</a></li>
 			</ul>
 
-			<p class="header">
+			<p class="header" font-color="black">
 				This project is maintained by <a class="header name"
 					href="https://github.com/shale462">shale462</a>
 			</p>
@@ -49,7 +49,8 @@
 
 		</header>
 		<section>
-		<h1 class="header">The Rights of Canadian Women</h1>
+		<h1 color:black>The Rights of Canadian Women</h1><br>
+		<hr>
 			<h3>
 				<a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
