--- a/index.html
+++ b/index.html
@@ -18,17 +18,9 @@
 	<div class="wrapper">
 		<header>
 			<h1 class="header">The Rights of Canadian Women</h1>
-			<p class="header">Museum Exhibit Framework on the History of
-				Canadian Women&#39;s Rights (LIBS1160 Major Assignment)</p>
+			<p class="header"></p>
 
-			<ul>
-				<li class="download"><a class="buttons"
-					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
-						ZIP</a></li>
-				<li><a class="buttons github"
-					href="https://github.com/shale462/WomenInHistory.github.io">View
-						On GitHub</a></li>
-			</ul>
+
 			<ul>
 				<li><a class="buttons" href="Women1870">1870-1879</a></li>
 				<li><a class="buttons" href="Women1880">1880-1889</a></li>
@@ -49,9 +41,11 @@
 
 		</header>
 		<section>
-		<h1 color:black>The Rights of Canadian Women</h1><br>
-		<hr>
-			<h3>
+			<h1 color:black>The Rights of Canadian Women in History</h1>
+			<h2>Museum Exhibit Framework on the History of Canadian
+				Women&#39;s Rights (LIBS1160 Major Assignment)</h2>
+			<h3><br>
+
 				<a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
 					class="octicon octicon-link"></span></a>Exhibit Framework
@@ -59,11 +53,10 @@
 
 			<p>
 				This automatic page generator is the easiest way to create beautiful
-				pages for all of your projects. Author your page content here <a
-					href="https://guides.github.com/features/mastering-markdown/">using
-					GitHub Flavored Markdown</a>,.<br>The purpose of this website is
-				to propose a new museum exhibit and allow visitors to navigate
-				through the framework to explore the proposed topic at length.
+				pages for all of your projects. Author your page content here using
+				GitHub Flavored Markdown</a>,.<br>The purpose of this website is to
+				propose a new museum exhibit and allow visitors to navigate through
+				the framework to explore the proposed topic at length.
 			</p>
 
 			<h3>
@@ -120,7 +113,7 @@
 					aria-hidden="true"><span class="octicon octicon-link"></span></a>Support
 				or Contact
 			</h3>
-
+			<a href="https://guides.github.com/features/mastering-markdown/"></a>
 			<p>
 				Having trouble with Pages? Check out our <a
 					href="https://help.github.com/pages">documentation</a> or <a
@@ -133,6 +126,13 @@
 				<small>Hosted on <a href="https://pages.github.com">GitHub
 						Pages</a> using the Dinky theme
 				</small>
+											
+				<li class="download"><a class="buttons"
+					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
+						ZIP</a></li>
+				<li><a class="buttons"
+					href="https://github.com/shale462/WomenInHistory.github.io">View
+						On GitHub</a>
 			</p>
 		</footer>
 	</div>
