--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 			<h1 color:black>The Rights of Canadian Women in History</h1>
 			<h2>Museum Exhibit Framework on the History of Canadian
 				Women&#39;s Rights (LIBS1160 Major Assignment)</h2>
-			<h3><br>
-
-				<a id="welcome-to-github-pages" class="anchor"
+			<h3>
+				<br> <a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
 					class="octicon octicon-link"></span></a>Exhibit Framework
 			</h3>
@@ -122,18 +121,12 @@
 			</p>
 		</section>
 		<footer>
-			<p>
-				<small>Hosted on <a href="https://pages.github.com">GitHub
-						Pages</a> using the Dinky theme
-				</small>
-											
-				<li class="download"><a class="buttons"
-					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
-						ZIP</a></li>
-				<li><a class="buttons"
-					href="https://github.com/shale462/WomenInHistory.github.io">View
-						On GitHub</a>
-			</p>
+			<a class="buttons"
+				href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
+				ZIP</a> 
+				<a class="buttons github"
+				href="https://github.com/shale462/WomenInHistory.github.io">View
+				On GitHub</a>
 		</footer>
 	</div>
 	<!--[if !IE]><script>fixScale(document);</script><![endif]-->
