--- a/index.html
+++ b/index.html
@@ -121,12 +121,13 @@
 			</p>
 		</section>
 		<footer>
-			<a class="buttons"
-				href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
-				ZIP</a> 
-				<a class="buttons github"
-				href="https://github.com/shale462/WomenInHistory.github.io">View
-				On GitHub</a>
+			<p>
+				<a
+					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
+					ZIP</a>
+					<a href="https://github.com/shale462/WomenInHistory.github.io">View
+					On GitHub</a>
+			</p>
 		</footer>
 	</div>
 	<!--[if !IE]><script>fixScale(document);</script><![endif]-->
