--- a/index.html
+++ b/index.html
@@ -119,15 +119,17 @@
 					href="https://github.com/contact">contact support</a> and we’ll
 				help you sort it out.
 			</p>
-		</section>
-		<footer>
-			<p>
+						<p>
 				<a
 					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
-					ZIP</a>
+					ZIP</a></p>
+					<p>
 					<a href="https://github.com/shale462/WomenInHistory.github.io">View
-					On GitHub</a>
+					On GitHub</a></p>
 			</p>
+		</section>
+		<footer>
+
 		</footer>
 	</div>
 	<!--[if !IE]><script>fixScale(document);</script><![endif]-->
