--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 						<p>
 				<a
 					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
-					ZIP</a></p>
-					<p>
+					ZIP</a> | 
 					<a href="https://github.com/shale462/WomenInHistory.github.io">View
 					On GitHub</a></p>
 			</p>
