--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
 		</header>
 		<section>
 			<h1 color:black>The Rights of Canadian Women in History</h1>
-			<h2>Museum Exhibit Framework on the History of Canadian
-				Women&#39;s Rights (LIBS1160 Major Assignment)</h2>
+			<h3 align="center">Museum Exhibit Framework on the History of Canadian
+				Women&#39;s Rights (LIBS1160 Major Assignment)</h3>
 			<h3>
+			
+			<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913" style="vertical-align:middle">
 				<br> <a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
 					class="octicon octicon-link"></span></a>Exhibit Framework
@@ -109,23 +111,19 @@
 
 			<h3>
 				<a id="support-or-contact" class="anchor" href="#support-or-contact"
-					aria-hidden="true"><span class="octicon octicon-link"></span></a>Support
-				or Contact
+					aria-hidden="true"><span class="octicon octicon-link"></span></a>Questions or Comments?
 			</h3>
-			<a href="https://guides.github.com/features/mastering-markdown/"></a>
 			<p>
-				Having trouble with Pages? Check out our <a
-					href="https://help.github.com/pages">documentation</a> or <a
-					href="https://github.com/contact">contact support</a> and we’ll
-				help you sort it out.
+				If you have any comments of questions, feel free to contact me at <a
+					href="mailto:shale-cc@conestogac.on.ca">My Conestoga Email</a>
 			</p>
-						<p>
-				<a
-					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
+					
+				<p>	
+				<a href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
 					ZIP</a> | 
-					<a href="https://github.com/shale462/WomenInHistory.github.io">View
-					On GitHub</a></p>
-			</p>
+				<a href="https://github.com/shale462/WomenInHistory.github.io">View	On GitHub</a>
+				</p>
+			
 		</section>
 		<footer>
 
