--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				Women&#39;s Rights (LIBS1160 Major Assignment)</h3>
 			<h3>
 			
-			<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913" style="vertical-align:middle">
+			<div align="center"><img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913" ></div>
 				<br> <a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
 					class="octicon octicon-link"></span></a>Exhibit Framework
