--- a/index.html
+++ b/index.html
@@ -42,92 +42,81 @@
 		</header>
 		<section>
 			<h1 color:black>The Rights of Canadian Women in History</h1>
-			<h3 align="center">Museum Exhibit Framework on the History of Canadian
-				Women&#39;s Rights (LIBS1160 Major Assignment)</h3>
+			<h3 align="center">Museum Exhibit Framework on the History of
+				Canadian Women&#39;s Rights (LIBS1160 Major Assignment)</h3>
 			<h3>
-			
-			<div align="center"><img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913" ></div>
+
+				<div align="center">
+					<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913">
+				</div>
 				<br> <a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
 					class="octicon octicon-link"></span></a>Exhibit Framework
 			</h3>
 
-			<p>
-				This automatic page generator is the easiest way to create beautiful
-				pages for all of your projects. Author your page content here using
-				GitHub Flavored Markdown</a>,.<br>The purpose of this website is to
-				propose a new museum exhibit and allow visitors to navigate through
-				the framework to explore the proposed topic at length.
-			</p>
+			<p>The purpose of this website is to propose a new museum exhibit
+				and allow visitors to see what kind of content the exhibit would
+				consist of.</p>
+			<p>The rights of women in Canada went through major reform
+				beginning in 1878 and continuing into the present day. Canadian
+				women began their journey to equality with very little rights. They
+				were not even regarded as “persons” under Canadian law. They were
+				unable to own property, vote, pursue a higher education or have a
+				say over their own reproductive organs.</p>
 
 			<h3>
 				<a id="designer-templates" class="anchor" href="#designer-templates"
-					aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer
-				Templates
+					aria-hidden="true"><span class="octicon octicon-link"></span></a>First
+				Wave Feminism
 			</h3>
 
 			<p>
 				The first wave of feminism in Canada is one of great importance.
 				Navigation through each decade of the lives of Canadian women and
-				the early struggles to be seen as equals is a very enriching
-				learning experience. To see what kinds of topics are to be covered
-				in the exhibit, please use the navigation menu on the left.<br>
-				<br>
-			</p>
-			<iframe width="640" height="390"
-				src="https://www.youtube.com/embed/8n65Y8itAcg" frameborder="0"
-				allowfullscreen></iframe>
-			<h3>
-				<a id="creating-pages-manually" class="anchor"
-					href="#creating-pages-manually" aria-hidden="true"><span
-					class="octicon octicon-link"></span></a>Why Explore First-Wave
-				Feminism?
-			</h3>
-
-			<p>I The influence of women in the late 1800s to early 1900s
-				resulted in enormous changes for human rights in Canada. This
-				resulted in the empowerment of many women and led to further
-				movements in the 1960s and onwards. The Famous Five, a well-known
-				group of brave and relentless women were at the forefront of the
-				movements</p>
-
-			<h3>
-				<a id="authors-and-contributors" class="anchor"
-					href="#authors-and-contributors" aria-hidden="true"><span
-					class="octicon octicon-link"></span></a>Authors and Contributors
-			</h3>
-
+				the early struggles to be seen as equals would be a valuable and
+				enriching learning experience. <br>
+			<p>The framework of this museum exhibit is intended to be a
+				decade-by-decade walkthrough of the average woman’s life in a highly
+				visual and interactive environment. Each section of the exhibit
+				would be an inside look – detailing the strict limitations and
+				frustrations of Canadian women on a daily basis. The exhibit is mean
+				to make visitors familiar with the pressures placed upon women of
+				the past and to generate interest about the women who stepped up to
+				demand change.</p>
 			<p>
-				You can <a href="https://github.com/blog/821" class="user-mention">@mention</a>
-				a GitHub username to generate a link to their profile. The resulting
-				<code>&lt;a&gt;</code>
-				element will link to the contributor’s GitHub Profile. For example:
-				In 2007, Chris Wanstrath (<a href="https://github.com/defunkt"
-					class="user-mention">@defunkt</a>), PJ Hyett (<a
-					href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>),
-				and Tom Preston-Werner (<a href="https://github.com/mojombo"
-					class="user-mention">@mojombo</a>) founded GitHub.
+				I The influence of women in the late 1800s to early 1900s resulted
+				in enormous changes for human rights in Canada. This resulted in the
+				empowerment of many women and led to further movements in the 1960s
+				and onwards. The Famous Five, a well-known group of brave and
+				relentless women were at the forefront of the movements. They will
+				be a feature of the exhibit, and as such, have their own section on
+				this webpage. <br> To begin exploring the topics that are to be
+				covered in the exhibit, please use the navigation menu on the left.
 			</p>
 
+
 			<h3>
+
 				<a id="support-or-contact" class="anchor" href="#support-or-contact"
-					aria-hidden="true"><span class="octicon octicon-link"></span></a>Questions or Comments?
+					aria-hidden="true"><span class="octicon octicon-link"></span></a>Questions
+				or Comments?
 			</h3>
 			<p>
 				If you have any comments of questions, feel free to contact me at <a
-					href="mailto:shale-cc@conestogac.on.ca">My Conestoga Email</a>
+					href="mailto:shale-cc@conestogac.on.ca">My Conestoga Email</a> and
+				I will respond to you as soon as possible.
 			</p>
-					
-				<p>	
-				<a href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
-					ZIP</a> | 
-				<a href="https://github.com/shale462/WomenInHistory.github.io">View	On GitHub</a>
-				</p>
-			
-		</section>
-		<footer>
 
-		</footer>
+			<p>
+				<a
+					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
+					ZIP</a> | <a
+					href="https://github.com/shale462/WomenInHistory.github.io">View
+					On GitHub</a>
+			</p>
+
+		</section>
+		<footer> </footer>
 	</div>
 	<!--[if !IE]><script>fixScale(document);</script><![endif]-->
 
