--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header>
+		<header><a id="welcome-to-github-pages" class="anchor"
+					href="#welcome-to-github-pages" aria-hidden="true"><span
+					class="octicon octicon-link"></span></a>
 			<h1 class="header">The Rights of Canadian Women</h1>
 			<p class="header"></p>
 
