--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 </head>
 <body>
 	<div class="wrapper">
-		<header><a id="welcome-to-github-pages" class="anchor"
-					href="#welcome-to-github-pages" aria-hidden="true"><span
-					class="octicon octicon-link"></span></a>
+		<header>
 			<h1 class="header">The Rights of Canadian Women</h1>
 			<p class="header"></p>
 
@@ -43,17 +41,17 @@
 
 		</header>
 		<section>
+			<a id="welcome-to-github-pages" class="anchor"
+				href="#welcome-to-github-pages" aria-hidden="true"><span
+				class="octicon octicon-link"></span></a>
 			<h1 color:black>The Rights of Canadian Women in History</h1>
-			<h3 align="center">Museum Exhibit Framework on the History of
-				Canadian Women&#39;s Rights (LIBS1160 Major Assignment)</h3>
-			<h3>
 
-				<div align="center">
-					<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913">
-				</div>
-				<br> <a id="welcome-to-github-pages" class="anchor"
-					href="#welcome-to-github-pages" aria-hidden="true"><span
-					class="octicon octicon-link"></span></a>Exhibit Framework
+			<div align="center">
+				<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913">
+			</div>
+			<br> <a id="welcome-to-github-pages" class="anchor"
+				href="#welcome-to-github-pages" aria-hidden="true"><span
+				class="octicon octicon-link"></span></a>Exhibit Framework
 			</h3>
 
 			<p>The purpose of this website is to propose a new museum exhibit
