--- a/Women1870.html
+++ b/Women1870.html
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 		<header>
 		
-			<h1 class="header">Canadian Women in 1870</h1>
+			<h1 class="header">The Rights of Canadian Women</h1>
 			<p class="header"></p>
 
 
@@ -42,15 +42,12 @@
 
 		</header>
 		<section>
-			<h1 color:black>The Rights of Canadian Women in History</h1>
-			<h3 align="center">Museum Exhibit Framework on the History of
-				Canadian Women&#39;s Rights (LIBS1160 Major Assignment)</h3>
-			<h3>
+			<h1 color:black>Canadian Women - 1870</h1>
 
-				<div align="center">
-					<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913">
-				</div>
-				<br> <a id="welcome-to-github-pages" class="anchor"
+			<h3>
+				
+				<br> 
+				<a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
 					class="octicon octicon-link"></span></a>Exhibit Framework
 			</h3>
