--- a/Women1870.html
+++ b/Women1870.html
@@ -42,8 +42,10 @@
 
 		</header>
 		<section>
+		<div align="center">
 			<h1 color:black>Canadian Women - 1870</h1>
-
+			<a href="index.html" class="buttons">Return to Home Page</a>
+			</div>
 			<h3>
 				
 				<br> 
