--- a/Women1870.html
+++ b/Women1870.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="wrapper">
 		<header>
-		
+
 			<h1 class="header">The Rights of Canadian Women</h1>
 			<p class="header"></p>
 
@@ -42,27 +42,34 @@
 
 		</header>
 		<section>
-		<div align="center">
-			<h1 color:black>Canadian Women - 1870</h1>
-			<a href="index.html" class="buttons">Return to Home Page</a>
+			<div align="center">
+				<h1 color:black>Canadian Women - 1870</h1>
+				<a href="index.html" class="buttons">Return to Home Page</a>
 			</div>
 			<h3>
-				
-				<br> 
-				<a id="welcome-to-github-pages" class="anchor"
+
+				<br> <a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
-					class="octicon octicon-link"></span></a>Exhibit Framework
+					class="octicon octicon-link"></span></a>Homesteading
 			</h3>
 
-			<p>The purpose of this website is to propose a new museum exhibit
-				and allow visitors to see what kind of content the exhibit would
-				consist of.</p>
-			<p>The rights of women in Canada went through major reform
-				beginning in 1878 and continuing into the present day. Canadian
-				women began their journey to equality with very little rights. They
-				were not even regarded as “persons” under Canadian law. They were
-				unable to own property, vote, pursue a higher education or have a
-				say over their own reproductive organs.</p>
+			<p>Beginning around 1870 (and continuing on into 1914) many
+				Canadian women got married and then moved across Canada to take
+				advantage of the Dominion Lands Policy. Land was almost free and
+				many families jumped at the opportunity to build their lives on this
+				land. They headed to the Prairies in droves and arrived to find that
+				succeeding was surviving.</p>
+			<div align="center">
+				<img src="images/homesteaders.jpg" alt="A Family Homestead in the Prairies">
+			</div>
+			<p>These families had to start with nothing - not even shelter or
+				readily available water. Women worked alongside their husbands and
+				children to build a home, start a farm, and dig wells. Women were a
+				key part of the homestead life and as such they got their hands
+				dirty. They spun their own yarn and sewed clothing for the family,
+				tended to the livestock and handled gardening. They did this all far
+				away from their family and friends. They were often far from medical
+				help as well, so injuries often resulted in death.</p>
 
 			<h3>
 				<a id="designer-templates" class="anchor" href="#designer-templates"
