--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 				class="octicon octicon-link"></span></a>
 			<h1 color:black>The Rights of Canadian Women in History</h1>
 			<h3>
-			<div align="center">
-				<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913">
-			</div>
-			
-			<br> <a id="welcome-to-github-pages" class="anchor"
+				<div align="center">
+					<img src="images/suffrageMarch1913.jpg" alt="Suffrage March 1913">
+				</div>
+
+				<br> <a id="welcome-to-github-pages" class="anchor"
 					href="#welcome-to-github-pages" aria-hidden="true"><span
 					class="octicon octicon-link"></span></a>Exhibit Framework
-			
+
 			</h3>
 
 			<p>The purpose of this website is to propose a new museum exhibit
@@ -85,6 +85,9 @@
 				to make visitors familiar with the pressures placed upon women of
 				the past and to generate interest about the women who stepped up to
 				demand change.</p>
+			<iframe width="640" height="390"
+				src="https://www.youtube.com/embed/fHXbJpW9AHk" frameborder="0"
+				allowfullscreen></iframe>
 			<p>
 				I The influence of women in the late 1800s to early 1900s resulted
 				in enormous changes for human rights in Canada. This resulted in the
