--- a/Women1870.html
+++ b/Women1870.html
@@ -60,7 +60,8 @@
 				land. They headed to the Prairies in droves and arrived to find that
 				succeeding was surviving.</p>
 			<div align="center">
-				<img src="images/homesteaders.jpg" alt="A Family Homestead in the Prairies">
+				<img src="images/homesteaders.jpg"
+					alt="A Family Homestead in the Prairies">
 			</div>
 			<p>These families had to start with nothing - not even shelter or
 				readily available water. Women worked alongside their husbands and
@@ -71,48 +72,48 @@
 				away from their family and friends. They were often far from medical
 				help as well, so injuries often resulted in death.</p>
 
+			<div align="center">
+				<img src="images/homesteaders ladies.jpg" alt="Lady Homesteaders">
+			</div>
+
 			<h3>
 				<a id="designer-templates" class="anchor" href="#designer-templates"
-					aria-hidden="true"><span class="octicon octicon-link"></span></a>First
-				Wave Feminism
+					aria-hidden="true"><span class="octicon octicon-link"></span></a>Owning
+				Property and Patriarchy
 			</h3>
 
-			<p>
-				The first wave of feminism in Canada is one of great importance.
-				Navigation through each decade of the lives of Canadian women and
-				the early struggles to be seen as equals would be a valuable and
-				enriching learning experience. <br>
-			<p>The framework of this museum exhibit is intended to be a
-				decade-by-decade walkthrough of the average woman’s life in a highly
-				visual and interactive environment. Each section of the exhibit
-				would be an inside look – detailing the strict limitations and
-				frustrations of Canadian women on a daily basis. The exhibit is mean
-				to make visitors familiar with the pressures placed upon women of
-				the past and to generate interest about the women who stepped up to
-				demand change.</p>
-			<p>
-				I The influence of women in the late 1800s to early 1900s resulted
-				in enormous changes for human rights in Canada. This resulted in the
-				empowerment of many women and led to further movements in the 1960s
-				and onwards. The Famous Five, a well-known group of brave and
-				relentless women were at the forefront of the movements. They will
-				be a feature of the exhibit, and as such, have their own section on
-				this webpage. <br> To begin exploring the topics that are to be
-				covered in the exhibit, please use the navigation menu on the left.
-			</p>
-
+			<p>In 1872, women in Ontario were given the right to earn their
+				own wage without it being in the control of their husband. This was
+				given to them by the Married Women's Property Act of Ontario. It was
+				one of the first times that women were given such a right.
+			<p>First Nations women were not seeing such positive change. The
+				Indian Act of 1876 stripped native women of their Indian status and
+				right to live on reserves if they decided to marry a non-native.
+				This meant that if their husband died or abandoned them, they could
+				not return to their reserve as they were essentially evicted. They
+				were denied education and health care and they couldn't even inherit
+				land from family that was still on the reserve. This didn't apply to
+				native men, who could marry whoever they wanted without it resulting
+				in loss of property or their title.</p>
 
 			<h3>
-
 				<a id="support-or-contact" class="anchor" href="#support-or-contact"
-					aria-hidden="true"><span class="octicon octicon-link"></span></a>Questions
-				or Comments?
+					aria-hidden="true"><span class="octicon octicon-link"></span></a>Women's
+				Associations
 			</h3>
-			<p>
-				If you have any comments of questions, feel free to contact me at <a
-					href="mailto:shale-cc@conestogac.on.ca">My Conestoga Email</a> and
-				I will respond to you as soon as possible.
-			</p>
+			<p>Women began to form groups in order to discuss issues
+				pertaining to their rights. One of these early organizations,
+				Toronto Women's Literary Guild (later renamed Canadian Women's
+				Suffrage Association) was founded by Emily Stowe, among others.
+				Stowe was the first woman to practice medicine in Canada. She did so
+				without having an official license, because women were not welcome
+				in Canadian colleges and universities. She had to study in the
+				United States to get a degree. The Toronto Women's Literary Guild
+				worked hard as the first suffragette group in Canada to push for
+				higher education for Women.</p>
+			<div align="center">
+				<img src="images/Emily Stowe.jpg" alt="A Picture of Emily Stowe">
+			</div>
 
 			<p>
 				<a
