--- a/Women1870.html
+++ b/Women1870.html
@@ -113,7 +113,7 @@
 				higher education for Women.</p>
 			<div align="center">
 				<img src="images/Emily Stowe.jpg" alt="A Picture of Emily Stowe">
-			</div>
+			</div>Emily Stowe
 
 			<p>
 				<a
