--- a/Women1870.html
+++ b/Women1870.html
@@ -112,8 +112,10 @@
 				worked hard as the first suffragette group in Canada to push for
 				higher education for Women.</p>
 			<div align="center">
-				<img src="images/Emily Stowe.jpg" alt="A Picture of Emily Stowe">
-				<i>Emily Stowe</i>
+				<figure>
+					<img src="images/Emily Stowe.jpg" alt="A Picture of Emily Stowe">
+					<figcaption>Emily Stowe</figcaption>
+				</figure>
 			</div>
 
 			<p>
