--- a/Women1870.html
+++ b/Women1870.html
@@ -59,10 +59,13 @@
 				many families jumped at the opportunity to build their lives on this
 				land. They headed to the Prairies in droves and arrived to find that
 				succeeding was surviving.</p>
+			<figure>
 			<div align="center">
 				<img src="images/homesteaders.jpg"
 					alt="A Family Homestead in the Prairies">
+					<figcaption>A Typical Homestead Family</figcaption>
 			</div>
+			</figure>
 			<p>These families had to start with nothing - not even shelter or
 				readily available water. Women worked alongside their husbands and
 				children to build a home, start a farm, and dig wells. Women were a
@@ -71,11 +74,12 @@
 				tended to the livestock and handled gardening. They did this all far
 				away from their family and friends. They were often far from medical
 				help as well, so injuries often resulted in death.</p>
-
+			<figure>
 			<div align="center">
 				<img src="images/homesteaders ladies.jpg" alt="Lady Homesteaders">
+				<figcaption>A Picture of Lady Homesteaders</figcaption>
 			</div>
-
+			</figure>
 			<h3>
 				<a id="designer-templates" class="anchor" href="#designer-templates"
 					aria-hidden="true"><span class="octicon octicon-link"></span></a>Owning
