--- a/Women1870.html
+++ b/Women1870.html
@@ -66,7 +66,7 @@
 					<figcaption>A Typical Homestead Family</figcaption>
 			</div>
 			</figure>
-			<p>These families had to start with nothing - not even shelter or
+			<p><br>These families had to start with nothing - not even shelter or
 				readily available water. Women worked alongside their husbands and
 				children to build a home, start a farm, and dig wells. Women were a
 				key part of the homestead life and as such they got their hands
@@ -82,7 +82,7 @@
 			</figure>
 			<h3>
 				<a id="designer-templates" class="anchor" href="#designer-templates"
-					aria-hidden="true"><span class="octicon octicon-link"></span></a>Owning
+					aria-hidden="true"><span class="octicon octicon-link"></span></a><br>Owning
 				Property and Patriarchy
 			</h3>
 
@@ -102,7 +102,7 @@
 
 			<h3>
 				<a id="support-or-contact" class="anchor" href="#support-or-contact"
-					aria-hidden="true"><span class="octicon octicon-link"></span></a>Women's
+					aria-hidden="true"><span class="octicon octicon-link"></span></a><br>Women's
 				Associations
 			</h3>
 			<p>Women began to form groups in order to discuss issues
@@ -124,7 +124,7 @@
 
 			<p>
 				<a
-					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
+					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master"><br>Download
 					ZIP</a> | <a
 					href="https://github.com/shale462/WomenInHistory.github.io">View
 					On GitHub</a>
