--- a/index.html
+++ b/index.html
@@ -114,10 +114,8 @@
 
 			<p>
 				<a
-					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master">Download
-					ZIP</a> | <a
-					href="https://github.com/shale462/WomenInHistory.github.io">View
-					On GitHub</a>
+					href="https://github.com/shale462/WomenInHistory.github.io/archive/gh-pages.zip">Download
+					ZIP</a> 
 			</p>
 
 		</section>
