--- a/Women1870.html
+++ b/Women1870.html
@@ -124,10 +124,8 @@
 
 			<p>
 				<a
-					href="https://github.com/shale462/WomenInHistory.github.io/zipball/master"><br>Download
-					ZIP</a> | <a
-					href="https://github.com/shale462/WomenInHistory.github.io">View
-					On GitHub</a>
+					href="https://github.com/shale462/WomenInHistory.github.io/archive/gh-pages.zip"><br>Download
+					ZIP</a> 
 			</p>
 
 		</section>
