--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<li><a class="buttons" href="Women1910">1930-1939</a></li>
 				<li><a class="buttons" href="Women1910">1940-1949</a></li>
 				<li><a class="buttons" href="Women1910">1950-1959</a></li>
+				<li><a class="buttons" href="Resources">Bibliography/Resources</a></li>
 			</ul>
 
 			<p class="header" font-color="black">
