--- a/Women1870.html
+++ b/Women1870.html
@@ -32,6 +32,7 @@
 				<li><a class="buttons" href="Women1910">1930-1939</a></li>
 				<li><a class="buttons" href="Women1910">1940-1949</a></li>
 				<li><a class="buttons" href="Women1910">1950-1959</a></li>
+				<li><a class="buttons" href="Resources">Bibliography/Resources</a></li>
 			</ul>
 
 			<p class="header" font-color="black">
@@ -60,25 +61,27 @@
 				land. They headed to the Prairies in droves and arrived to find that
 				succeeding was surviving.</p>
 			<figure>
-			<div align="center">
-				<img src="images/homesteaders.jpg"
-					alt="A Family Homestead in the Prairies">
+				<div align="center">
+					<img src="images/homesteaders.jpg"
+						alt="A Family Homestead in the Prairies">
 					<figcaption>A Typical Homestead Family</figcaption>
-			</div>
+				</div>
 			</figure>
-			<p><br>These families had to start with nothing - not even shelter or
-				readily available water. Women worked alongside their husbands and
-				children to build a home, start a farm, and dig wells. Women were a
-				key part of the homestead life and as such they got their hands
-				dirty. They spun their own yarn and sewed clothing for the family,
-				tended to the livestock and handled gardening. They did this all far
-				away from their family and friends. They were often far from medical
-				help as well, so injuries often resulted in death.</p>
+			<p>
+				<br>These families had to start with nothing - not even shelter
+				or readily available water. Women worked alongside their husbands
+				and children to build a home, start a farm, and dig wells. Women
+				were a key part of the homestead life and as such they got their
+				hands dirty. They spun their own yarn and sewed clothing for the
+				family, tended to the livestock and handled gardening. They did this
+				all far away from their family and friends. They were often far from
+				medical help as well, so injuries often resulted in death.
+			</p>
 			<figure>
-			<div align="center">
-				<img src="images/homesteaders ladies.jpg" alt="Lady Homesteaders">
-				<figcaption>A Picture of Lady Homesteaders</figcaption>
-			</div>
+				<div align="center">
+					<img src="images/homesteaders ladies.jpg" alt="Lady Homesteaders">
+					<figcaption>A Picture of Lady Homesteaders</figcaption>
+				</div>
 			</figure>
 			<h3>
 				<a id="designer-templates" class="anchor" href="#designer-templates"
@@ -119,13 +122,13 @@
 				<div align="center">
 					<img src="images/Emily Stowe.jpg" alt="A Picture of Emily Stowe">
 					<figcaption>Emily Stowe</figcaption>
-				</div>				
+				</div>
 			</figure>
 
 			<p>
 				<a
 					href="https://github.com/shale462/WomenInHistory.github.io/archive/gh-pages.zip"><br>Download
-					ZIP</a> 
+					ZIP</a>
 			</p>
 
 		</section>
